@@ -879,10 +879,14 @@
                        (uses (lvar-uses fun))
                        (leaf (when (ref-p uses) (ref-leaf uses))))
                   (multiple-value-bind (type defined-type)
-                      (if (global-var-p leaf)
-                          (values (leaf-type leaf) (leaf-defined-type leaf))
-                          (values nil nil))
-                    (when (or (eq kind :unknown-keys)
+                      (cond ((global-var-p leaf)
+                             (values (leaf-type leaf) (leaf-defined-type leaf)))
+                            ((eq kind :unknown-keys)
+                             (values (lvar-fun-type fun) nil))
+                            (t
+                             (values nil nil)))
+                    (when (or (and (eq kind :unknown-keys)
+                                   (fun-type-p type))
                               (and (fun-type-p defined-type)
                                    (not (fun-type-p type))))
                       (validate-call-type node type leaf)))))))
