@@ -1,6 +1,7 @@
 ;;;; -*- coding: utf-8; fill-column: 78 -*-
 
 changes relative to sbcl-1.4.6:
+  * enhancement: better handling of unknown keyword arguments (lp#1750466)
   * bug fix: Compiling a SLEEP call with a float positive infinity argument no
     longer causes an internal error (lp#1754081)
   * bug fix: Keyword arguments provided to a generic function with
